# pointcloud-3d-detector-tensorrt

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: utils.cmake
config/: iassd_hvcsx2_4x8_80e_kitti_3cls(export).cache  trt.yaml
doc/: check.md  gridballquery.md  profile.md
inc/: buffer.h  buffer_helper.h  calibrator.h  helper.h  model.h  tensorrt_model.h  trt_models.hpp  visualization.h  visualization_helper.h
plugins/: CMakeLists.txt  README.md
plugins/src/: CMakeLists.txt
plugins/src/FPSamplingPlugin/: FPSampling.cu  FPSampling.h  FPSamplingPlugin.cpp  FPSamplingPlugin.cu  FPSamplingPlugin.h  README.md
plugins/src/ballQueryPlugin/: README.md  ballQuery.cu  ballQuery.cuh  ballQueryPlugin.cpp  ballQueryPlugin.cu  ballQueryPlugin.h
plugins/src/common/: checkMacrosPlugin.cpp  checkMacrosPlugin.h  common.cu  common.h  hash.h  plugin.h  plugin_auto_declare.h  plugin_auto_declare_helper.h  print.h
plugins/src/gridBallQueryPlugin/: gridBallQuery.cu  gridBallQueryPlugin.cpp  gridBallQueryPlugin.cu  gridBallQueryPlugin.h
plugins/src/havSamplingForQueryPlugin/: havSamplingQ.cu  havSamplingQ.h  havSamplingQPlugin.cu  havSamplingQPlugin.h
plugins/src/havSamplingPlugin/: README.md  hash.cuh  havSampling.cu  havSampling.h  havSamplingPlugin.cpp  havSamplingPlugin.cu  havSamplingPlugin.h  havSamplingReturnHashPlugin.cpp  havSamplingReturnHashPlugin.h
plugins/src/nms3DPlugin/: README.md  nms3D.cu  nms3D.h  nms3DPlugin.cpp  nms3DPlugin.h  nms3dPlugin.cpp
src/: pcvt.py  point_detector.cpp
